--- a/src/Product.css
+++ b/src/Product.css
@@ -27,8 +27,11 @@
     background: #ff9f00;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border-color: #ff9f00;
     color: #111;
+    padding: 5px;
+    border-radius: 3px;
+    cursor: pointer;
   }
   
   .product__price {
