--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -26,7 +26,7 @@
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border-color: #ff9f00;
     color: #111;
     cursor: pointer;
 }
